サーバアドレスを更新しました。 正規表現を修正しました。 設定のネットワーク定義例に freenode と Ustream を追加してみました。 設定サンプルでサーバが送受信する文字コードを UTF-8 ベースに変更し、IRCnet と 2ch に JIS を指定しました。(Windows 版 LimeChat 2 向け)

--- a/doc-src/all.conf.in
+++ b/doc-src/all.conf.in
@@ -33,6 +33,10 @@
 
 <&2ch>
 
+<&freenode>
+
+<&ustream>
+
 # -----------------------------------------------------------------------------
 # 必須の設定は以上です。以下はモジュール(プラグイン)の設定です。
 # -----------------------------------------------------------------------------
