--- a/sample.conf
+++ b/sample.conf
@@ -100,13 +100,13 @@ general {
 
   # IRCサーバーから送られる文字のコードと、IRCサーバーへ送る文字のコード。
   # それぞれ省略された場合はjis。
-  server-in-encoding: jis
-  server-out-encoding: jis
+  server-in-encoding: utf8
+  server-out-encoding: utf8
 
   # クライアントから受け取る文字のコードと、クライアントへ伝える文字のコード。
   # それぞれ省略された場合はjis。
-  client-in-encoding: jis
-  client-out-encoding: jis
+  client-in-encoding: utf8
+  client-out-encoding: utf8
 
   # Tiarraは標準出力に様々なメッセージを出力するが、その文字コードを指定する。省略時にはutf8となる。
   # ただしtiarra.confのパースが完了するまでは文字コードの変換は行なわれない(つまりこの設定が有効にならない)ことに注意して下さい。
@@ -145,7 +145,7 @@ general {
   #ipv6-bind-addr: ::0
 
   # Tiarra が、 001 や 002 や、 recent log を送信するときなどに使う prefix
-  # を指定します。 hostname や fqdn っぽいものを指定すると良いかもしれません。
+  # を指定します。 hostname や FQDN っぽいものを指定すると良いかもしれません。
   # デフォルトは tiarra です。普通変える必要はありません。
   #sysmsg-prefix: tiarra
 
@@ -212,6 +212,8 @@ networks {
   # 複数のネットワークに接続したい場合は多重定義して下さい。
   name: ircnet
   name: 2ch
+  #name: freenode
+  #name: ustream
 
   # 通常Tiarraではチャンネル名を「#Tiarra@ircnet」のように表現します。
   # これはネットワークircnet内の#Tiarraというチャンネルを表わします。
@@ -265,12 +267,13 @@ networks {
 ircnet {
   # サーバーのホストとポートを指定。複数行可。(host/port が指定されていない場合は)省略不可。
   # 同じサーバの複数のポート指定は順番に試すので、大量に書かない方がよい。
-  server: irc.nara.wide.ad.jp 6662 6663
-  server: irc.fujisawa.wide.ad.jp 6661 6664
+  server: irc.ircnet.ne.jp 6667
+  server: irc.media.kyoto-u.ac.jp 6662 6663
+  server: irc.huie.hokudai.ac.jp 6667
 
   # サーバーのホストとポート。(server が指定されていない場合は)省略不可。
   # server を指定した場合は server が優先されます。
-  #host: irc.nara.wide.ad.jp
+  #host: irc.media.kyoto-u.ac.jp
   #port: 6663
 
   # general/userで設定したユーザ名を使わずに、各ネットワークで独自のユーザ名を使用する事も可能。
@@ -283,11 +286,11 @@ ircnet {
   # このサーバーの要求するパスワード。省略可能。
   #password: hoge
 
-  # general/setver-in/out-encodingで設定したエンコーディングを使わずに、
-  # 各ネットワークで独自のエンコーディングを使用する事も可能。
+  # general/setver-in/out-encodingで設定した文字のコードを使わずに、
+  # 各ネットワークで独自の文字コードを使用する事も可能。
   # 省略されたら当然、generalで設定したものが使われる。
-  #in-encoding: jis
-  #out-encoding: jis
+  in-encoding: jis
+  out-encoding: jis
 
   # general/(ipv4|ipv6)bind-addrで設定したローカルアドレスを使わずに、
   # 各ネットワークで独自のbind_addrを使用する事も可能。
@@ -297,8 +300,12 @@ ircnet {
 }
 
 2ch {
-  host: irc.2ch.net
-  port: 6667
+  server: irc.2ch.net 6667
+  server: irc2.2ch.net 6667
+  server: irc.juggler.jp 6667
+
+  in-encoding: jis
+  out-encoding: jis
 }
 
 # -----------------------------------------------------------------------------
