--- a/mini.conf
+++ b/mini.conf
@@ -90,8 +90,7 @@ networks {
 # -----------------------------------------------------------------------------
 ircnet {
   # サーバーのホストとポート。省略不可。
-  host: irc.nara.wide.ad.jp
-  port: 6667
+  server: irc.ircnet.ne.jp 6667
 
   #user: hoge
   #name: hoge
@@ -101,14 +100,15 @@ ircnet {
 }
 
 irc2ch {
-  host: irc.2ch.net
-  port: 6667
+  server: irc.2ch.net 6667
+  #server: irc2.2ch.net 6667
+  #server: irc.juggler.jp 6667
 }
 
 # -----------------------------------------------------------------------------
 # 必須の設定は以上です。以下はモジュール(プラグイン)の設定です。
 # ここにある以外にもいっぱいあるので,
-# 
+#
 # -----------------------------------------------------------------------------
 
 + System::WebClient {
