a new variable lc_channel is available for unifying log directories of Log::Channel in case-sensitive filesystems.

--- a/sample.conf
+++ b/sample.conf
@@ -708,6 +708,7 @@ ircnet {
   # それ以外(privも含む)のログはothers/%Y.%m.%d.txtに保存される。
   # #(channel) はチャンネル名に展開される。
   # (古いバージョンだと展開されずにそのままディレクトリ名になってしまいます。)
+  # IRCのチャンネル名はcase insensitiveなので、小文字に統一した #(lc_channel) も利用可能です。
   channel: priv priv
   channel: #(channel) *
   #channel: others *
