--- a/all.conf
+++ b/all.conf
@@ -1,6 +1,6 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id: all.conf.in 11365 2008-05-10 14:58:28Z topia $
+# $Id: all.conf.in 36552 2010-01-27 14:53:29Z drry $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 # このファイルにはすべてのブロックの解説があります。
@@ -1592,8 +1592,12 @@ ustream {
   # それ以外(privも含む)のログはothers/%Y.%m.%d.txtに保存される。
   # #(channel) はチャンネル名に展開される。
   # (古いバージョンだと展開されずにそのままディレクトリ名になってしまいます。)
+  # IRCのチャンネル名は大文字小文字が区別されず、サーバからは各送信者が指定した通りの
+  # チャンネル名が送られてきます。そのため、大文字小文字が区別されるファイルシステムでは
+  # 同じチャンネルが別々のディレクトリに作られることになります。
+  # この問題を回避するため、チャンネル名を小文字に統一した #(lc_channel) が利用できます。
   channel: priv priv
-  channel: #(channel) *
+  channel: #(lc_channel) *
   #channel: others *
 
   # ファイル名のエンコーディング.
