--- a/sample.conf
+++ b/sample.conf
@@ -528,6 +528,14 @@ ircnet {
   #   「#aaaaa@ircnet」、「#bbbbb@ircnet:*.jp」、「#ccccc@ircnet」、「#ddddd@ircnet」の4つのチャンネルに入る。
   #channel: #aaaaa@ircnet,#bbbbb@ircnet:*.jp, #ccccc@ircnet
   #channel: #ddddd@ircnet
+
+  # join 送出の間隔(秒)
+  # Excess Flood になってしまう場合に変更してください。
+  # 2ちゃんねるIRCの3鯖(irc.juggler.jp) にて 25 チャンネル以上 join している場合に
+  # 引っかかった例があるようです。
+  # 本モジュールでは1度に1コマンドで5つのチャンネルへの join を発行します。
+  # デフォルトは1秒です。
+  #interval: 1
 }
 
 - Channel::Join::Invite {
