--- a/all.conf
+++ b/all.conf
@@ -1735,6 +1735,21 @@ ustream {
   command: privmsg,notice,topic,join,part,quit,kill
 }
 
++ Network::Freenode {
+  # Freenode サポート
+
+  # 現状では ChanServ の検出以外の機能はありません。
+  # drop による状況の変化についてもサポートしていません。
+
+  # Channel::Rejoin では、このモジュールによってチャンネルが
+  # ChanServ の管理下にあると検出した時には Rejoin 動作を
+  # 行わなくなります。
+
+  # 設定はありません。
+  # また、 freenode 以外のネットワークでこのモジュールが
+  # 有効になっていても不都合はないはずです。
+}
+
 - Skeleton {
   # Skeleton for tiarra-module.
 
