--- a/sample.conf
+++ b/sample.conf
@@ -749,6 +749,21 @@ ircnet {
   command: privmsg,notice,topic,join,part,quit,kill
 }
 
++ Network::Freenode {
+  # Freenode サポート
+
+  # 現状では ChanServ の検出以外の機能はありません。
+  # drop による状況の変化についてもサポートしていません。
+
+  # Channel::Rejoin では、このモジュールによってチャンネルが
+  # ChanServ の管理下にあると検出した時には Rejoin 動作を
+  # 行わなくなります。
+
+  # 設定はありません。
+  # また、 freenode 以外のネットワークでこのモジュールが
+  # 有効になっていても不都合はないはずです。
+}
+
 + System::Error {
   # サーバーからのERRORメッセージをNOTICEに埋め込む
 
