--- a/sample.conf
+++ b/sample.conf
@@ -175,6 +175,20 @@ general {
   # multi-server-mode 時のデフォルトは 0 、 single-server-mode 時のデフォルトは 1 です。
   #nick-fix-mode: 0
 
+  # Tiarra がチャンネルに join する際の挙動を設定します。
+  # デフォルト設定で Excess Flood になってしまう場合に設定してください。
+  #
+  # irc.juggler.jp (2ch@IRC) にて 25 チャンネル以上 join している場合に
+  # Excess Flood になってしまった事例があるそうです。
+
+  # JOIN コマンドを送信する間隔 (秒)
+  # デフォルトは1秒です。
+  join-interval: 1
+
+  # 一つの JOIN コマンドで指定するチャンネルの数
+  # デフォルトは5チャンネルです。
+  join-channels-per-command: 5
+
   messages {
     # Tiarra が使用する、いくつかのメッセージを指定する。
 
@@ -530,11 +544,8 @@ ircnet {
   #channel: #ddddd@ircnet
 
   # join 送出の間隔(秒)
-  # Excess Flood になってしまう場合に変更してください。
-  # 2ちゃんねるIRCの3鯖(irc.juggler.jp) にて 25 チャンネル以上 join している場合に
-  # 引っかかった例があるようです。
-  # 本モジュールでは1度に1コマンドで5つのチャンネルへの join を発行します。
-  # デフォルトは1秒です。
+  # この設定は obsolete です。 general/join-interval を利用してください。
+  # 設定されていた場合は general/join-interval に優先されます。
   #interval: 1
 }
 
