ドキュメントと設定サンプルを更新しました。

--- a/all.conf
+++ b/all.conf
@@ -284,12 +284,12 @@ ircnet {
 }
 
 freenode {
-  server: chat.freenode.net 6667
+  server: chat.freenode.net 6666 8001
 
-  # freenodeではパスワードとして「アカウント パスワード」のように、
+  # freenode独自の機能として、パスワードに「アカウント パスワード」のような、
   # アカウントに空白とパスワードを続けたものを指定することで、
   # NICKコマンドの前の接続の段階でidentifyすることができるため、
-  # nickの重複や異なるnick等、nickとは無関係に自動identifyが可能。
+  # nick重複の際や異なるnick、異なるuser等、nick/userとは無関係に自動identifyが可能。
   #password: account secret
 }
 
@@ -397,7 +397,7 @@ ustream {
   # Auto::Aliasを有効にしていれば、エイリアス置換を行ないます。
 
   # 反応する発言と、それに対する返事を定義します。
-  # エイリアス置換が有効です。#(nick.now)と$(channel)はそれぞれ
+  # エイリアス置換が有効です。#(nick.now)と#(channel)はそれぞれ
   # 相手の現在のnickとチャンネル名に置換されます。
   #
   # コマンド: reply
@@ -639,7 +639,7 @@ ustream {
   # Auto::Aliasを有効にしていれば、エイリアス置換を行ないます。
 
   # 発言を行なうチャンネルと、その内容を定義します。
-  # #(nick.now)と$(channel)は、それぞれ相手の現在のnickとチャンネル名に置換されます。
+  # #(nick.now)と#(channel)は、それぞれ相手の現在のnickとチャンネル名に置換されます。
   #
   # 書式: <チャンネル名> <発言内容>
   #channel: #チャンネル@ircnet   「#ちゃんねる」に移転しました。
@@ -1624,6 +1624,11 @@ ustream {
   # ascii は実際には utf8 と同等で8bit部分が全てquoted-printableされる.
   # デフォルトはWindowsではsjis, それ以外では utf8.
   #filename-encoding: utf8
+
+  # ログの改行コード出力をCRLFにするかどうか.
+  # デフォルトはWindowsでは1(CRLF), それ以外では0(LF).
+  # Windowsでログを扱うことが多い場合、1にするとちょっと幸せになれるかもしれない.
+  #crlf: 0
 }
 
 - Log::ChannelList {
