--- a/sample.conf
+++ b/sample.conf
@@ -37,10 +37,10 @@
 #
 # block
 # {foo: bar}
-# 
+#
 # block {
 # foo: bar}
-# 
+#
 # block
 # {foo: bar
 # }
@@ -740,6 +740,11 @@ ircnet {
   # ascii は実際には utf8 と同等で8bit部分が全てquoted-printableされる.
   # デフォルトはWindowsではsjis, それ以外では utf8.
   #filename-encoding: utf8
+
+  # ログの改行コード出力をCRLFにするかどうか.
+  # デフォルトはWindowsでは1(CRLF), それ以外では0(LF).
+  # Windowsでログを扱うことが多い場合、1にするとちょっと幸せになれるかもしれない.
+  #crlf: 0
 }
 
 - Log::Recent {
