add comment to Log::Writer::File and Windows. regenerate documentation.

--- a/all.conf
+++ b/all.conf
@@ -1625,10 +1625,11 @@ ustream {
   # デフォルトはWindowsではsjis, それ以外では utf8.
   #filename-encoding: utf8
 
-  # ログの改行コード出力をCRLFにするかどうか.
-  # デフォルトはWindowsでは1(CRLF), それ以外では0(LF).
-  # Windowsでログを扱うことが多い場合、1にするとちょっと幸せになれるかもしれない.
-  #crlf: 0
+  # Windows でログファイルが LF になって困る場合は
+  # module/Log/Writer/File.pm を r36798 以降に上げてください。
+  # http://fleur.hio.jp/perldoc/perl/5.8.1/perldelta.ja.html#Win32:_sysopen,_sysread,_syswrite
+  # syswrite がテキストモードをサポートしなくなっているそうですので、
+  # print に書き換えて対応しています。
 }
 
 - Log::ChannelList {
