--- a/sample.conf
+++ b/sample.conf
@@ -1,6 +1,6 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id: sample.conf.in 15771 2008-07-13 23:55:21Z drry $
+# $Id: sample.conf.in 36775 2010-02-16 17:42:52Z drry $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 #
@@ -741,10 +741,11 @@ ircnet {
   # デフォルトはWindowsではsjis, それ以外では utf8.
   #filename-encoding: utf8
 
-  # ログの改行コード出力をCRLFにするかどうか.
-  # デフォルトはWindowsでは1(CRLF), それ以外では0(LF).
-  # Windowsでログを扱うことが多い場合、1にするとちょっと幸せになれるかもしれない.
-  #crlf: 0
+  # Windows でログファイルが LF になって困る場合は
+  # module/Log/Writer/File.pm を r36798 以降に上げてください。
+  # http://fleur.hio.jp/perldoc/perl/5.8.1/perldelta.ja.html#Win32:_sysopen,_sysread,_syswrite
+  # syswrite がテキストモードをサポートしなくなっているそうですので、
+  # print に書き換えて対応しています。
 }
 
 - Log::Recent {
